argocd/argocd/_ns.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: &name argocd
  labels:
    app.kubernetes.io/name: *name
    goldilocks.fairwinds.com/enabled: "true"
    goldilocks.fairwinds.com/vpa-update-mode: "auto"
  annotations:
    argocd.argoproj.io/sync-options: >-
      Delete=false,
      Force=false,
      Prune=false,
      Replace=false,
      ServerSideApply=true
